--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
     "appService.preDeployTask": "publish-release",
-    "appService.deploySubpath": "bin/Release/netcoreapp3.0/publish"
+    "appService.deploySubpath": "bin\\Release\\netcoreapp3.0\\publish",
+    "appService.defaultWebAppToDeploy": "/subscriptions/b24b8d95-2cfd-469f-ad89-c066a1ebdd7b/resourceGroups/appsvc_windows_centralus/providers/Microsoft.Web/sites/Bookalog"
 }
